добавлены изменения элемента logo (логотип, шрифт текста)

--- a/style.css
+++ b/style.css
@@ -1,35 +1,62 @@
 .title {
  font-family: Roboto;
-
 }
+
 .wrapper {
  margin: auto;
  width: 80%;
-
 }
+
 body {
  margin: 0;
-
 }
+
 .header {
  display: flex;
  justify-content: space-between;
-
 }
+
 .logo, .menu {
  display: inline-block;
-
 }
+
 .menu {
  display: flex;
  align-items: center;
-
 }
+
 .menu__item {
  padding: 0 13px;
-
 }
+
 .menu__item:last-child {
  padding-right: 0;
+}
 
+.logo {
+ position: relative;
+ padding: 40px 0;
+ padding-left: 44px;
+ font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+ width: 190px;
+ height: 35px;
+ }
+
+.logo__circle {
+width: 28px;
+height: 28px;
+border: dashed 1px red;
+position: absolute;
+left: 0;
+top: 50%;
+transform: translateY(-50%);
+background: #0056EC;
+border-radius: 50%;
+opacity: .7;
+}
+
+.logo__circle_color_blue {
+left: 8px;
+top: 56%;
+background: #C8DBFB;
 }
