--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ margin: 0;
 .header {
 display: flex;
 justify-content: space-between;
-margin-bottom: 100px;
+margin-bottom: 200px;
 }
 
 
@@ -113,29 +113,29 @@ background: #C8DBFB;
 
 .main {
 background: top right no-repeat url(img/img.svg);
-padding: 0 63% 100px 0;
+padding: 0 63% 200px 0;
 }
 
 .main__title {
-font: bold 50px/65px pt_serifbold, arial, helvetica, sans-serif;
+font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
 margin: 0 0 40px 0;
 }
 
 .main__title-text_highlight {
-background: #ECF3FF;
+background:linear-gradient(180deg,rgba(255,255,255,1) 15%, #ECF3FF 15%);
 }
 
 .main__subtitle {
-font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
+font: 400 22px/26px Roboto, arial, helvetica, sans-serif;
 margin: 0 0 41px 0;
 }
 
 .main__button {
-font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 display: inline-block;
 color: #fff;
 background: #0056EC;
-padding: 14px 16px;
+padding: 18px 21px;
 text-decoration: none;
 border-radius: 4px;
 transition: opacity .5s;
