--- a/style.css
+++ b/style.css
@@ -149,3 +149,20 @@ transition: opacity .5s;
 .main__button:hover {
 opacity: .5;
 }
+
+
+.owl-dots {
+text-align: center;
+font-size: 0;
+margin-top: 50px;
+}
+
+.owl-dot {
+  display: inline-block;
+  vertical-align: middle;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #C8DBFB;
+  margin: 0 5px;
+}
