--- a/style.css
+++ b/style.css
@@ -158,11 +158,159 @@ margin-top: 65px;
 }
 
 .owl-dot {
-  display: inline-block;
-  vertical-align: middle;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #C8DBFB;
-  margin: 0 3px;
+display: inline-block;
+vertical-align: middle;
+width: 8px;
+height: 8px;
+border-radius: 50%;
+background-color: #C8DBFB;
+margin: 0 3px;
+}
+
+@media (max-width: 1366px) {
+
+.wrapper {
+width: 70%;
+}
+.header {
+margin-bottom: 20px;
+}
+
+.main {
+background: top right no-repeat url(img/img2.svg);
+}
+
+.main__title {
+font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
+}
+
+.main__subtitle {
+font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
+}
+
+.main__button {
+font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+padding: 14px 16px;
+}
+
+}
+
+
+
+
+@media (max-width: 768px) {
+.menu, .logo, .owl-dots {
+display: none;
+}
+.header {
+margin-bottom: 70px;
+}
+
+.main {
+text-align: center;
+padding: 60% 0 0;
+background-size: 80%;
+background-position: top center;
+}
+.main__title {
+margin-bottom: 44px;
+font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+}
+.main__subtitle {
+margin-bottom: 25px;
+font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
+}
+.main__button {
+font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+}
+
+
+#menu__toggle {
+  opacity: 0;
+}
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 46px;
+  left: 326px;
+  width: 25px;
+  height: 3px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #0056EC;
+;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #000;
+  font: 500 30px/35px Roboto, arial, helvetica, sans-serif;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu {
+  transition-duration: .25s;
+}
+.menu__item {
+  transition-duration: .25s;
+}
 }
