--- a/style.css
+++ b/style.css
@@ -141,20 +141,21 @@ margin: 0 3px;
 
 
 
-
-
 @media (max-width: 1366px) {
 .wrapper {
 width: 68%;
 }
 .header {
-margin-bottom: 130px;
+margin-bottom: 80px;
+}
+h1 {
+ width: 150%;
 }
 p {
-  width: 80%;
+  width: 100%;
 }
 .menu {
-padding-right: 12px;
+padding-right: 3px;
 }
 .menu__item {
 margin-right: 26px;
@@ -171,9 +172,11 @@ height: 2px;
 }
 .main {
 background: top right no-repeat url(img/img2.svg);
+padding: 0 63% 80px 0;
 }
 .main__title {
 font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
+padding-top: 18px;
 }
 .main__subtitle {
 font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
