--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ margin: 0;
 .header {
 display: flex;
 justify-content: space-between;
-margin-bottom: 122px;
+margin-bottom: 125px;
+padding-left: 4px;
 }
 .logo, .menu {
 display: inline-block;
@@ -23,6 +24,7 @@ display: inline-block;
 display: flex;
 align-items: center;
 padding-right: 12px;
+padding-bottom: 5px;
 }
 .menu__item {
 position: relative;
@@ -97,11 +99,11 @@ background: #C8DBFB;
 }
 .main {
 background: top right no-repeat url(img/img.svg);
-padding: 0 63% 200px 0;
+padding: 0 63% 200px 3px;
 }
 .main__title {
 font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
-margin: 0 0 40px 0;
+margin: 0 0 36px 0;
 padding-top: 70px;
 }
 .main__title-text_highlight {
@@ -109,7 +111,7 @@ background:linear-gradient(180deg,rgba(255,255,255,1) 15%, #ECF3FF 15%);
 }
 .main__subtitle {
 font: 400 22px/26px Roboto, arial, helvetica, sans-serif;
-margin: 0 0 41px 0;
+margin: 0 0 40px 0;
 width: 80%;
 }
 .main__button {
@@ -117,10 +119,11 @@ font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 display: inline-block;
 color: #fff;
 background: #0056EC;
-padding: 18px 28px;
+padding: 19px 22px;
 text-decoration: none;
 border-radius: 4px;
 transition: opacity .5s;
+width: 40%;
 }
 .main__button:hover {
 opacity: .5;
