--- a/style.css
+++ b/style.css
@@ -162,15 +162,18 @@ display: none;
 }
 
 
+
 @media (max-width: 1366px) {
 .wrapper {
 width: 68%;
 }
 .header {
-margin-bottom: 80px;
+margin-bottom: 74px;
+padding-left: 0;
 }
 .menu {
 padding-right: 3px;
+padding-bottom: 2px;
 }
 .menu__item {
 margin-right: 26px;
@@ -187,12 +190,13 @@ height: 2px;
 }
 .main {
 background: top right no-repeat url(img/img2.svg);
-padding: 0 63% 80px 0;
+padding: 0 63% 145px 0;
 }
 .main__title {
 font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
-padding-top: 18px;
+padding-top: 16px;
 width: 150%;
+margin: 0 0 39px 0;
 }
 .main__subtitle {
 font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -200,7 +204,8 @@ width: 100%;
 }
 .main__button {
 font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-padding: 14px 16px;
+padding: 15px 16px;
+width: 50%;
 }
 }
 
