--- a/style.css
+++ b/style.css
@@ -217,10 +217,10 @@ width: 50%;
 width: 91%;
 }
 .header {
-margin-bottom: 80px;
+margin-bottom: 74px;
 }
 .menu {
-padding-right: 3px;
+padding-right: 0px;
 }
 .menu__item {
 margin-right: 26px;
@@ -237,23 +237,25 @@ height: 2px;
 }
 .main {
 background: top right no-repeat url(img/img3.svg);
-padding: 0 63% 80px 0;
+padding: 0 63% 145px 0;
 }
 .main__title {
 font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
-padding-top: 18px;
+padding-top: 16px;
 width: 150%;
+margin: 0 0 38px 0;
 }
 .main__subtitle {
 font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
 width: 100%;
+margin: 0 0 41px 0;
 }
 .main__button {
 font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-padding: 14px 16px;
+padding: 15px 16px;
+width: 50%;
 }
 }
-
 
 
 @media (max-width: 768px) {
