--- a/style.css
+++ b/style.css
@@ -263,10 +263,11 @@ width: 50%;
 display: none;
 }
 .header {
-margin-bottom: 20px;
+margin-bottom: 0;
+height: 95px;
 }
 .main {
-background: top right no-repeat url(img/img3.svg);
+background: top right no-repeat url(img/img4.svg);
 text-align: center;
 padding: 74% 0 0;
 background-size: 74%;
