--- a/style.css
+++ b/style.css
@@ -161,34 +161,31 @@ display: none;
   left: 0;
 }
 
-@media (max-width: 1500px) {
-.wrapper {
-width: 75%;
+@media (max-width: 1830px) {
+.header {
+margin-bottom: 90px;
 }
 .main {
-background: top right no-repeat url(img/img2.svg);
-padding: 0 63% 145px 0;
-}
-.main__title {
-font: bold 58px/76px pt_serifbold, arial, helvetica, sans-serif;
-padding-top: 16px;
-width: 150%;
-margin: 0 0 39px 0;
-}
-.main__subtitle {
-font: 400 20px/22px Roboto, arial, helvetica, sans-serif;
-width: 100%;
-}
-.main__button {
-font: 500 16px/18px Roboto, arial, helvetica, sans-serif;
-padding: 15px 16px;
-width: 50%;
+padding: 0 60% 240px 3px;
 }
 }
-
-
-
-
+@media (max-width: 1745px) {
+.header {
+margin-bottom: 80px;
+}
+.main {
+background-size: 50%;
+padding: 0 54% 180px 3px;
+}
+}
+@media (max-width: 1500px) {
+.header {
+margin-bottom: 78px;
+}
+.main {
+padding: 0 50% 120px 0;
+}
+}
 @media (max-width: 1366px) {
 .wrapper {
 width: 68%;
@@ -234,37 +231,26 @@ padding: 15px 16px;
 width: 50%;
 }
 }
-
-@media (max-width: 1300px) {
+@media (max-width: 1360px) {
+.wrapper {
+width: 75%;
+}
+}
+@media (max-width: 1332px) {
 .wrapper {
 width: 80%;
 }
-.main {
-background: top right no-repeat url(img/img2.svg);
-padding: 0 63% 145px 0;
 }
-.main__title {
-font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
-padding-top: 16px;
-width: 100%;
-margin: 0 0 39px 0;
-}
-.main__subtitle {
-font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
-width: 100%;
-}
-.main__button {
-font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-padding: 15px 16px;
-width: 50%;
+@media (max-width: 1200px) {
+.wrapper {
+width: 85%;
 }
 }
-
-
-
-
-
-
+@media (max-width: 1150px) {
+.wrapper {
+width: 90%;
+}
+}
 
 @media (max-width: 1024px) {
 .wrapper {
@@ -291,7 +277,7 @@ height: 2px;
 }
 .main {
 background: top right no-repeat url(img/img3.svg);
-padding: 0 63% 145px 0;
+padding: 0 62% 145px 0;
 }
 .main__title {
 font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
@@ -312,37 +298,158 @@ width: 50%;
 }
 
 @media (max-width: 1000px) {
-.wrapper {
-width: 91%;
-}
 .header {
-margin-bottom: 74px;
+margin-bottom: 65px;
 }
 .main {
-background: top right no-repeat url(img/img3.svg);
-padding: 0 70% 145px 0;
-background-size: 54%;
+background-size: 50%;
+padding: 0 60% 120px 0;
 }
 .main__title {
-font: bold 40px/50px pt_serifbold, arial, helvetica, sans-serif;
-padding-top: 16px;
-width: 150%;
-margin: 0 0 38px 0;
+font: bold 47px/58px pt_serifbold, arial, helvetica, sans-serif;
 }
-.main__subtitle {
-font: 400 16px/19px Roboto, arial, helvetica, sans-serif;
-width: 120%;
-margin: 0 0 41px 0;
+@media (max-width: 970px) {
+.header {
+margin-bottom: 60px;
+}
+.main {
+background-size: 45%;
+padding: 0 59% 120px 0;
 }
 .main__button {
-font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-padding: 15px 16px;
+/*font: 500 14px/16px Roboto, arial, helvetica, sans-serif;*/
 width: 60%;
 }
 }
 
-
 @media (max-width: 768px) {
+.menu, .owl-dots, .logo__text {
+display: none;
+}
+.wrapper {
+width: 90%;
+}
+.header {
+margin-bottom: 30px;
+}
+.logo__circle {
+left: 0;
+top: 38px;
+}
+.logo__circle_color_blue {
+left: 8px;
+top: 44px;
+}
+.main {
+  background: top right no-repeat url(img/img4.svg);
+  text-align: center;
+  padding: 50% 0 0;
+  background-size: 60%;
+  background-position: top center;
+
+  }
+  .main__title {
+  display: inline-block;
+  margin-bottom: 25px;
+  padding-top: 10px;
+  font: bold 48px/60px pt_serifbold, arial, helvetica, sans-serif;
+  width: 80%;
+  }
+  .main__subtitle {
+  display: inline-block;
+  margin-bottom: 24px;
+  font: 500 18px/22px Roboto, arial, helvetica, sans-serif;
+  width: 70%;
+  }
+  .main__button {
+  font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+  width: 30%;
+  padding: 16px 17px;
+  }
+
+
+
+
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 32px;
+  right: 24px;
+
+  width: 25px;
+  height: 17px;
+
+  cursor: pointer;
+  z-index: 1;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 3px;
+
+  background-color: #0056EC;
+
+  transition-duration: .1s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+  padding: 80px 0;
+
+  list-style: none;
+  text-align: center;
+
+  background-color: #FFF;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+
+  transition-duration: .25s;
+}
+
+.menu__hamburger {
+  margin-top: 0;
+  display: inline-block;
+  border: dashed 2px red;
+  align-items: center;
+  text-align: center;
+  color: #000;
+  font: 500 30px/35px Roboto, arial, helvetica, sans-serif;
+  text-decoration: none;
+  transition-duration: .25s;
+}
+/*.menu__hamburger:first-child {
+  margin-top: 105px;
+}*/
+
+.menu__hamburger:hover {
+  background-color: #CFD8DC;
+}
+}
+
+
+@media (max-width: 375px) {
 .menu, .owl-dots, .logo__text {
 display: none;
 }
@@ -389,7 +496,7 @@ padding-left: 8px;
 
 
 
-.menu__btn {
+/*.menu__btn {
   display: flex;
   align-items: center;
   position: fixed;
@@ -401,7 +508,7 @@ padding-left: 8px;
 
   cursor: pointer;
   z-index: 1;
-}
+}*/
 
 .menu__btn > span,
 .menu__btn > span::before,
