--- a/style.css
+++ b/style.css
@@ -429,11 +429,12 @@ top: 44px;
 }
 
 .container {
-padding-top: 20px;
+padding-top: 83px;
 }
 
 .menu__hamburger {
-  padding-top: 20px;
+  padding-top: 25px;
+  padding-right:3px;
   margin-top: 0;
   display: inline-block;
   align-items: center;
@@ -455,23 +456,27 @@ width: 87%;
 }
 .header {
 margin-bottom: 0;
-height: 87px;
+height: 88px;
 }
 .main {
 padding: 77% 0 0;
-background-size: 60%;
+background-size: 85%;
+
 }
 .main__title {
-margin-bottom: 33px;
+margin-bottom: 32px;
 padding-left: 3px;
 font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
 width: 100%;
 }
 .main__subtitle {
-padding-left: 37px;
-width: 79%;
+width: 75%;
+padding-left: 5px;
+margin-bottom: 24px;
+font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
 }
 .main__button {
 width: 56%;
 padding-left: 8px;
+}
 }
