--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ display: inline-block;
 .menu {
 display: flex;
 align-items: center;
-padding-right: 12px;
+padding-right: 11px;
 padding-bottom: 5px;
 }
 .menu__item {
@@ -79,7 +79,7 @@ padding: 40px 0;
 padding-left: 44px;
 font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
 width: 190px;
-height: 35px;
+height: 30px;
 }
 .logo__circle {
 width: 28px;
@@ -104,14 +104,14 @@ padding: 0 63% 268px 3px;
 .main__title {
 font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
 margin: 0 0 36px 0;
-padding-top: 74px;
+padding-top: 75px;
 }
 .main__title-text_highlight {
 background:linear-gradient(180deg,rgba(255,255,255,1) 15%, #ECF3FF 15%);
 }
 .main__subtitle {
 font: 400 22px/26px Roboto, arial, helvetica, sans-serif;
-margin: 0 0 40px 0;
+margin: 0 0 41px 0;
 width: 80%;
 }
 .main__button {
@@ -119,7 +119,7 @@ font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 display: inline-block;
 color: #fff;
 background: #0056EC;
-padding: 19px 22px;
+padding: 18px 22px;
 text-decoration: none;
 border-radius: 4px;
 transition: opacity .5s;
@@ -191,11 +191,11 @@ padding: 0 50% 120px 0;
 width: 68%;
 }
 .header {
-margin-bottom: 74px;
+margin-bottom: 73px;
 padding-left: 0;
 }
 .menu {
-padding-right: 3px;
+padding-right: 4px;
 padding-bottom: 2px;
 }
 .menu__item {
@@ -219,16 +219,16 @@ padding: 0 63% 145px 0;
 font: bold 50px/66px pt_serifbold, arial, helvetica, sans-serif;
 padding-top: 16px;
 width: 150%;
-margin: 0 0 39px 0;
+margin: 0 0 40px 0;
 }
 .main__subtitle {
 font: 400 18px/21px Roboto, arial, helvetica, sans-serif;
-width: 100%;
+width: 107%;
 }
 .main__button {
 font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
 padding: 15px 16px;
-width: 50%;
+width: 52%;
 }
 }
 @media (max-width: 1360px) {
@@ -257,7 +257,7 @@ width: 90%;
 width: 91%;
 }
 .header {
-margin-bottom: 74px;
+margin-bottom: 73px;
 }
 .menu {
 padding-right: 0px;
@@ -306,7 +306,7 @@ background-size: 50%;
 padding: 0 60% 120px 0;
 }
 .main__title {
-font: bold 47px/58px pt_serifbold, arial, helvetica, sans-serif;
+font: bold 47px/66px pt_serifbold, arial, helvetica, sans-serif;
 }
 @media (max-width: 970px) {
 .header {
@@ -315,6 +315,9 @@ margin-bottom: 60px;
 .main {
 background-size: 45%;
 padding: 0 59% 120px 0;
+}
+.main__subtitle {
+width: 120%;
 }
 .main__button {
 /*font: 500 14px/16px Roboto, arial, helvetica, sans-serif;*/
@@ -352,14 +355,14 @@ top: 44px;
   display: inline-block;
   margin-bottom: 25px;
   padding-top: 10px;
-  font: bold 48px/60px pt_serifbold, arial, helvetica, sans-serif;
+  font: bold 48px/66px pt_serifbold, arial, helvetica, sans-serif;
   width: 80%;
   }
   .main__subtitle {
   display: inline-block;
   margin-bottom: 24px;
   font: 500 18px/22px Roboto, arial, helvetica, sans-serif;
-  width: 70%;
+  width: 65%;
   }
   .main__button {
   font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
@@ -429,7 +432,7 @@ top: 44px;
 }
 
 .container {
-padding-top: 83px;
+padding-top: 82px;
 }
 
 .menu__hamburger {
@@ -449,6 +452,18 @@ padding-top: 83px;
 }
 }
 
+@media (max-width: 620px) {
+.main__button {
+width: 40%;
+}
+}
+@media (max-width: 592px) {
+.main__button {
+  width: 50%;
+}
+}
+
+
 
 @media (max-width: 375px) {
 .wrapper {
@@ -456,7 +471,7 @@ width: 87%;
 }
 .header {
 margin-bottom: 0;
-height: 88px;
+height: 87px;
 }
 .main {
 padding: 77% 0 0;
@@ -464,9 +479,9 @@ background-size: 85%;
 
 }
 .main__title {
-margin-bottom: 32px;
+margin-bottom: 33px;
 padding-left: 3px;
-font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+font: bold 30px/40px pt_serifbold, arial, helvetica, sans-serif;
 width: 100%;
 }
 .main__subtitle {
