--- a/style.css
+++ b/style.css
@@ -320,7 +320,6 @@ padding: 0 59% 120px 0;
 width: 120%;
 }
 .main__button {
-/*font: 500 14px/16px Roboto, arial, helvetica, sans-serif;*/
 width: 60%;
 }
 }
@@ -333,7 +332,8 @@ display: none;
 width: 90%;
 }
 .header {
-margin-bottom: 30px;
+margin-bottom: 0;
+height: 80px;
 }
 .logo__circle {
 left: 0;
@@ -346,16 +346,15 @@ top: 44px;
 .main {
   background: top right no-repeat url(img/img4.svg);
   text-align: center;
-  padding: 50% 0 0;
+  padding: 55% 0 0;
   background-size: 60%;
   background-position: top center;
-
   }
   .main__title {
   display: inline-block;
   margin-bottom: 25px;
-  padding-top: 10px;
-  font: bold 48px/66px pt_serifbold, arial, helvetica, sans-serif;
+  font: bold 40px/50px pt_serifbold, arial, helvetica, sans-serif;
+  padding-top: 0;
   width: 80%;
   }
   .main__subtitle {
@@ -458,6 +457,10 @@ width: 40%;
 }
 }
 @media (max-width: 592px) {
+  .main__title {
+  font: bold 30px/40px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
 .main__button {
   width: 50%;
 }
@@ -492,6 +495,38 @@ font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
 }
 .main__button {
 width: 56%;
+padding-left: 8px;
+}
+}
+
+
+@media (max-width: 320px) {
+.wrapper {
+width: 90%;
+}
+.header {
+margin-bottom: 0;
+height: 70px;
+}
+.main {
+padding: 65% 0 0;
+background-size: 70%;
+
+}
+.main__title {
+margin-bottom: 30px;
+padding-left: 3px;
+font: bold 25px/36px pt_serifbold, arial, helvetica, sans-serif;
+width: 100%;
+}
+.main__subtitle {
+width: 75%;
+padding-left: 5px;
+margin-bottom: 24px;
+font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+}
+.main__button {
+width: 60%;
 padding-left: 8px;
 }
 }
